<resources>
    <string name="app_name">AssignmentTwo</string>
    <string name="Play_Game">Play Game</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Timer">Timer: 0</string>
    <string name="Score">Score: 0</string>
    <string name="hint">Enter name</string>
    <string name="Avatar">Avatar Colour</string>
    <string name="Grey">Grey</string>
    <string name="Blue">Blue</string>
    <string name="Orange">Orange</string>
    <string name="Green">Green</string>
    <string name="Purple">Purple</string>
    <string name="Pink">Pink</string>
    <string name="Submit">Submit</string>
    <string name="timer_text">Time: %1$d</string>
    <string name="score_text">Score: %1$d</string>
    <string name="final_score_text">Final Score: %1$d</string>
    <string name="leaderboard_name_scored">%1$s scored: </string>
    <string name="leaderboard_score">%1$d</string>
</resources>