<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Game title/image display -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:src="@drawable/img_wakamole_text"/>

    <!-- Displays the player's score -->
    <TextView
        android:id="@+id/tv_playerscore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"/>

    <!-- Container for player name input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <!-- Input field for player's name -->
        <EditText
            android:id="@+id/et_playername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/hint"/>

    </LinearLayout>

    <!-- Container for avatar selection (radio buttons) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <!-- Label for avatar selection section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:text="@string/Avatar"/>

        <!-- Radio group for selecting avatar color -->
        <RadioGroup
            android:id="@+id/rg_avator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Radio button for grey avatar -->
            <RadioButton
                android:id="@+id/avatar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Grey"/>

            <!-- Radio button for blue avatar -->
            <RadioButton
                android:id="@+id/avatar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Blue"/>

            <!-- Radio button for orange avatar -->
            <RadioButton
                android:id="@+id/avatar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Orange"/>

            <!-- Radio button for green avatar -->
            <RadioButton
                android:id="@+id/avatar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Green"/>

            <!-- Radio button for purple avatar -->
            <RadioButton
                android:id="@+id/avatar5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Purple"/>

            <!-- Radio button for pink avatar -->
            <RadioButton
                android:id="@+id/avatar6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Pink"/>

        </RadioGroup>

    </LinearLayout>

    <!-- Container for the submit button (using ConstraintLayout for centering) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="20dp">

        <!-- Submit button to confirm user input -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Submit"
            android:onClick="onclickSubmit"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>